--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Facelapse</string>
+    <string name="album">ALBUM</string>
+    <string name="manual">MANUAL</string>
+    <string name="selfie">SELFIE</string>
 </resources>
